--- a/RMS/BusinessLogic/BusinessLogic.csproj
+++ b/RMS/BusinessLogic/BusinessLogic.csproj
@@ -32,6 +32,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -48,7 +49,10 @@
     <Compile Include="clsCurrencyMaster.cs" />
     <Compile Include="clsCustomerMaster.cs" />
     <Compile Include="clsDepartment.cs" />
+    <Compile Include="clsGoodReceiveNote.cs" />
+    <Compile Include="clsIssuesNote.cs" />
     <Compile Include="clsItemMaster.cs" />
+    <Compile Include="clsLocationMaster.cs" />
     <Compile Include="clsMainLocation.cs" />
     <Compile Include="clsMenuCategory.cs" />
     <Compile Include="clsMenuDepartment.cs" />
@@ -56,11 +60,13 @@
     <Compile Include="clsSetupSetting.cs" />
     <Compile Include="clsStatusMaster.cs" />
     <Compile Include="clsSteward.cs" />
+    <Compile Include="clsStockAdjustmentNote.cs" />
     <Compile Include="clsSubLocation.cs" />
     <Compile Include="clsSupplierCategory.cs" />
     <Compile Include="clsSupplierMaster.cs" />
     <Compile Include="clsTableCategory.cs" />
     <Compile Include="clsTableMaster.cs" />
+    <Compile Include="Point.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
