--- a/RMS/BusinessObject/BusinessObject.csproj
+++ b/RMS/BusinessObject/BusinessObject.csproj
@@ -45,7 +45,10 @@
     <Compile Include="objCapacityType.cs" />
     <Compile Include="objCurrencyMaster.cs" />
     <Compile Include="objCustomerMaster.cs" />
+    <Compile Include="objGoodReceiveNote.cs" />
+    <Compile Include="objIssuesNote.cs" />
     <Compile Include="objItemMaster.cs" />
+    <Compile Include="objLocationMaster.cs" />
     <Compile Include="objMainLocation.cs" />
     <Compile Include="objMenuCategory.cs" />
     <Compile Include="objMenuDepartment.cs" />
@@ -61,6 +64,7 @@
     <Compile Include="objSteward.cs" />
     <Compile Include="objSubLocation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="objStockAdjustmentNote.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
