--- a/RMS/BusinessLogic/BusinessLogic.csproj
+++ b/RMS/BusinessLogic/BusinessLogic.csproj
@@ -32,6 +32,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -49,6 +50,7 @@
     <Compile Include="clsCustomerMaster.cs" />
     <Compile Include="clsDepartment.cs" />
     <Compile Include="clsDocumentNumber.cs" />
+    <Compile Include="clsIssuesNote.cs" />
     <Compile Include="clsItemMaster.cs" />
     <Compile Include="clsMainLocation.cs" />
     <Compile Include="clsMenuCategory.cs" />
@@ -58,6 +60,7 @@
     <Compile Include="clsSetupSetting.cs" />
     <Compile Include="clsStatusMaster.cs" />
     <Compile Include="clsSteward.cs" />
+    <Compile Include="clsStockAdjustmentNote.cs" />
     <Compile Include="clsSubLocation.cs" />
     <Compile Include="clsSupplierCategory.cs" />
     <Compile Include="clsSupplierMaster.cs" />
