--- a/RMS/BusinessObject/BusinessObject.csproj
+++ b/RMS/BusinessObject/BusinessObject.csproj
@@ -52,6 +52,7 @@
     <Compile Include="objMainLocation.cs" />
     <Compile Include="objMenuCategory.cs" />
     <Compile Include="objMenuDepartment.cs" />
+    <Compile Include="objOrderType.cs" />
     <Compile Include="objPurchaseOrder.cs" />
     <Compile Include="objSetupSetting.cs" />
     <Compile Include="objStockAdjustmentNote.cs" />
