--- a/RMS/BusinessLogic/BusinessLogic.csproj
+++ b/RMS/BusinessLogic/BusinessLogic.csproj
@@ -56,6 +56,7 @@
     <Compile Include="clsMainLocation.cs" />
     <Compile Include="clsMenuCategory.cs" />
     <Compile Include="clsMenuDepartment.cs" />
+    <Compile Include="clsOrderType.cs" />
     <Compile Include="clsPurchaseOrder.cs" />
     <Compile Include="clsRecipeDetails.cs" />
     <Compile Include="clsSetupSetting.cs" />
