--- a/RMS/BusinessObject/BusinessObject.csproj
+++ b/RMS/BusinessObject/BusinessObject.csproj
@@ -54,6 +54,7 @@
     <Compile Include="objMenuDepartment.cs" />
     <Compile Include="objOrderType.cs" />
     <Compile Include="objPurchaseOrder.cs" />
+    <Compile Include="objRecipeDetails.cs" />
     <Compile Include="objSetupSetting.cs" />
     <Compile Include="objStockAdjustmentNote.cs" />
     <Compile Include="objSupplierCategory.cs" />
