Edit Business Object

--- a/RMS/BusinessObject/BusinessObject.csproj
+++ b/RMS/BusinessObject/BusinessObject.csproj
@@ -48,6 +48,7 @@
     <Compile Include="objDocumentNumber.cs" />
     <Compile Include="objGoodReceiveNote.cs" />
     <Compile Include="objIssuesNote.cs" />
+    <Compile Include="objItemLocation.cs" />
     <Compile Include="objItemMaster.cs" />
     <Compile Include="objMainLocation.cs" />
     <Compile Include="objMenuCategory.cs" />
