--- a/RMS/BusinessLogic/BusinessLogic.csproj
+++ b/RMS/BusinessLogic/BusinessLogic.csproj
@@ -60,6 +60,7 @@
     <Compile Include="clsOrderType.cs" />
     <Compile Include="clsPurchaseOrder.cs" />
     <Compile Include="clsRecipeDetails.cs" />
+    <Compile Include="clsReportMaster.cs" />
     <Compile Include="clsSetupSetting.cs" />
     <Compile Include="clsStatusMaster.cs" />
     <Compile Include="clsSteward.cs" />
