--- a/RMS/RMS/RMS.csproj
+++ b/RMS/RMS/RMS.csproj
@@ -66,6 +66,8 @@
     <Compile Include="Forms\Inventory\frmOpeningStock.Designer.cs">
       <DependentUpon>frmOpeningStock.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Inventory\objReportMaster.cs" />
+    <Compile Include="Forms\Inventory\objReportMaster_2.cs" />
     <Compile Include="Forms\Master Details\frmBankCards.cs">
       <SubType>Form</SubType>
     </Compile>
