Edit Stock Ajustment Note Form

--- a/RMS/Reports/Reports.csproj
+++ b/RMS/Reports/Reports.csproj
@@ -61,6 +61,11 @@
       <DependentUpon>rptPurchaseOrder.rpt</DependentUpon>
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="rptStockAjustmentNote.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>rptStockAjustmentNote.rpt</DependentUpon>
+    </Compile>
     <Compile Include="rptTransferNote.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -74,6 +79,10 @@
     <EmbeddedResource Include="rptPurchaseOrder.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
       <LastGenOutput>rptPurchaseOrder.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="rptStockAjustmentNote.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>rptStockAjustmentNote.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="rptTransferNote.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
