--- a/RMS/RMS/RMS.csproj
+++ b/RMS/RMS/RMS.csproj
@@ -198,11 +198,11 @@
     <Compile Include="Forms\Inventory\frmGRNCancel.Designer.cs">
       <DependentUpon>frmGRNCancel.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\Inventory\frmIssuesNote.cs">
+    <Compile Include="Forms\Inventory\frmTransferNote.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\Inventory\frmIssuesNote.Designer.cs">
-      <DependentUpon>frmIssuesNote.cs</DependentUpon>
+    <Compile Include="Forms\Inventory\frmTransferNote.Designer.cs">
+      <DependentUpon>frmTransferNote.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\Inventory\frmPurchaseOrder.cs">
       <SubType>Form</SubType>
@@ -228,11 +228,11 @@
     <Compile Include="Forms\Inventory\frmSupplierReturnNote.Designer.cs">
       <DependentUpon>frmSupplierReturnNote.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\Inventory\frmTransferNote.cs">
+    <Compile Include="Forms\Inventory\frmIssueNote.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\Inventory\frmTransferNote.Designer.cs">
-      <DependentUpon>frmTransferNote.cs</DependentUpon>
+    <Compile Include="Forms\Inventory\frmIssueNote.Designer.cs">
+      <DependentUpon>frmIssueNote.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -314,8 +314,8 @@
     <EmbeddedResource Include="Forms\Inventory\frmGRNCancel.resx">
       <DependentUpon>frmGRNCancel.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\Inventory\frmIssuesNote.resx">
-      <DependentUpon>frmIssuesNote.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\Inventory\frmTransferNote.resx">
+      <DependentUpon>frmTransferNote.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Inventory\frmPurchaseOrder.resx">
       <DependentUpon>frmPurchaseOrder.cs</DependentUpon>
@@ -329,8 +329,8 @@
     <EmbeddedResource Include="Forms\Inventory\frmSupplierReturnNote.resx">
       <DependentUpon>frmSupplierReturnNote.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\Inventory\frmTransferNote.resx">
-      <DependentUpon>frmTransferNote.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\Inventory\frmIssueNote.resx">
+      <DependentUpon>frmIssueNote.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
