--- a/RMS/RMS/RMS.csproj
+++ b/RMS/RMS/RMS.csproj
@@ -234,6 +234,18 @@
     <Compile Include="Forms\Inventory\frmIssueNote.Designer.cs">
       <DependentUpon>frmIssueNote.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Reports\frmItemMasterDetailsReports.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Reports\frmItemMasterDetailsReports.Designer.cs">
+      <DependentUpon>frmItemMasterDetailsReports.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Reports\frmSupplierDetailReport.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Reports\frmSupplierDetailReport.Designer.cs">
+      <DependentUpon>frmSupplierDetailReport.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -331,6 +343,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Inventory\frmIssueNote.resx">
       <DependentUpon>frmIssueNote.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Reports\frmItemMasterDetailsReports.resx">
+      <DependentUpon>frmItemMasterDetailsReports.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Reports\frmSupplierDetailReport.resx">
+      <DependentUpon>frmSupplierDetailReport.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
