--- a/RMS/Reports/Reports.csproj
+++ b/RMS/Reports/Reports.csproj
@@ -145,6 +145,12 @@
       <DependentUpon>rptSupplierReturnNote.rpt</DependentUpon>
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="rptTransferNoteReport.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>rptTransferNoteReport.rpt</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="frmReportViewer.resx">
@@ -209,6 +215,10 @@
     <EmbeddedResource Include="rptSupplierReturnNote.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
       <LastGenOutput>rptSupplierReturnNote.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="rptTransferNoteReport.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>rptTransferNoteReport.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
