--- a/RMS/BusinessLogic/BusinessLogic.csproj
+++ b/RMS/BusinessLogic/BusinessLogic.csproj
@@ -73,6 +73,7 @@
     <Compile Include="clsTableMaster.cs" />
     <Compile Include="clsIssueNote.cs" />
     <Compile Include="clsTransferNote.cs" />
+    <Compile Include="clsUserLevel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
