--- a/RMS/BusinessObject/BusinessObject.csproj
+++ b/RMS/BusinessObject/BusinessObject.csproj
@@ -72,6 +72,7 @@
     <Compile Include="objSubLocation.cs" />
     <Compile Include="objIssueNote.cs" />
     <Compile Include="objTransferNote.cs" />
+    <Compile Include="objUserLevel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
