--- a/RMS/RMS/RMS.csproj
+++ b/RMS/RMS/RMS.csproj
@@ -243,6 +243,12 @@
     <Compile Include="Forms\Reports\frmGRNListingReport.Designer.cs">
       <DependentUpon>frmGRNListingReport.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Reports\frmIssueNoteListing.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Reports\frmIssueNoteListing.Designer.cs">
+      <DependentUpon>frmIssueNoteListing.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Reports\frmItemMasterDetailsReports.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -379,6 +385,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Reports\frmGRNListingReport.resx">
       <DependentUpon>frmGRNListingReport.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Reports\frmIssueNoteListing.resx">
+      <DependentUpon>frmIssueNoteListing.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Reports\frmItemMasterDetailsReports.resx">
       <DependentUpon>frmItemMasterDetailsReports.cs</DependentUpon>
