--- a/RMS/BusinessLogic/BusinessLogic.csproj
+++ b/RMS/BusinessLogic/BusinessLogic.csproj
@@ -46,6 +46,7 @@
     <Compile Include="clsBankCardType.cs" />
     <Compile Include="clsBankDetails.cs" />
     <Compile Include="clsBrowsData.cs" />
+    <Compile Include="clsMenuDetails.cs" />
     <Compile Include="clsSupplierReturnNote.cs" />
     <Compile Include="clsUnit.cs" />
     <Compile Include="clsCategoryMaster.cs" />
